[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/units/enemies/wave_boss/wave_enemy/wave_enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/units/enemies/small_gun_enemy/small_gun_enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/units/enemies/sniper_enemy/sniper_enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/units/enemies/wave_boss/wave_enemy/enemy_teleport_effect.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/units/enemies/shotgun_enemy/shotgun_enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/units/enemies/plasma_enemy/plasma_enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/units/enemies/plasma_enemy/plasma_boss/plasma_boss.tscn" type="PackedScene" id=7]

[node name="WaveEnemy" type="Node2D"]
script = ExtResource( 1 )
unit_delay = 0.75
player_awareness_delay = 0.01
teleport_effect_scene = ExtResource( 4 )
small_gun_enemy_scene = ExtResource( 2 )
shotgun_enemy_scene = ExtResource( 5 )
plasma_enemy_scene = ExtResource( 6 )
sniper_enemy_scene = ExtResource( 3 )
plasma_boss_scene = ExtResource( 7 )

[node name="OverallDelayTimer" type="Timer" parent="."]

[node name="UnitDelayTimer" type="Timer" parent="."]
